--- a/context-server/package.json
+++ b/context-server/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.13.8"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "kafkajs": "^2.2.4"
   }
 }
