--- a/context-server/package.json
+++ b/context-server/package.json
@@ -13,7 +13,10 @@
     "@types/node": "^22.13.8"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.42",
+    "@langchain/groq": "^0.1.3",
     "dotenv": "^16.4.7",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "langchain": "^0.3.19"
   }
 }
